# verificador-processos

verificador-processos/: .gitignore  pyproject.toml  teste.html
verificador-processos/src/verificador_processos/: __init__.py  gui.py  seeddb.py
verificador-processos/src/verificador_processos/automacao/: auto_consulta.py  auto_email.py
verificador-processos/src/verificador_processos/info/: consts_email.py  data_de_hoje.py
verificador-processos/src/verificador_processos/model/: processo.py
verificador-processos/src/verificador_processos/web/: hello.html  style.css
