[tool.poetry]
name = "verificador-processos"
version = "1.0"
description = "Cadastra e verifica os procesos"
authors = ["lkaubs <kauanmessi@hotmail.com>"]
readme = "README.md"
packages = [{include = "verificador_processos", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
