[tool.poetry]
name = "verificador-processos"
version = "1.0"
description = "Automação de e-mails com Selenium"
authors = ["lkaubs <kauanmessi@hotmail.com>"]
readme = "README.md"
packages = [{include = "verificador_processos", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
schedule = "^1.2.2"
eel = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
